--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@ body {
   <a href="/login">login</a>
   <a href="/register">signup</a>
   <div class="topnav-right">
-    <a href="/signout">Sign_Out</a>
+    <a href="/None/signout">Sign_Out</a>
   </div>
 </div>
 
