--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
       <button type="submit" class="btn form-control btn-default">Login</button>
 </form>
 {% if error %}
-<p class="error"><strong>Error:</strong> {{ error }}
+<p class="error" style="color:red;"> {{ error }}
 {% endif %}
 
 {% endblock %}
