--- a/templates/home.html
+++ b/templates/home.html
@@ -59,7 +59,7 @@ body {
   <a href="/download">download</a>
   <a href="/view">view</a>
   <div class="topnav-right">
-    <a href="/signout">Sign_Out</a>
+    <a href="/{{name}}/signout">Sign_Out</a>
   </div>
 </div>
 
