--- a/templates/register.html
+++ b/templates/register.html
@@ -15,7 +15,7 @@
 <button type="submit" class="btn form-control btn-default">Register</button>
 </form>
 {% if error %}
-<p class="error"><strong>Error:</strong> {{ error }}
+<p class="error" style="color:red;">{{ error }}
 {% endif %}
 
 {% endblock %}
