--- a/templates/home.html
+++ b/templates/home.html
@@ -55,10 +55,10 @@ body {
 <body>
 
 <div class="topnav">
-  <a href="/upload">upload</a>
-  <a href="/download">download</a>
-  <a href="/view">view</a>
+  <a href="/{{name}}/upload">upload</a>
+  <a href="/{{name}}/view">view</a>
   <div class="topnav-right">
+	<a href="/{{name}}/home"> {{ name }}</a>
     <a href="/{{name}}/signout">Sign_Out</a>
   </div>
 </div>
