--- a/templates/check_owner.html
+++ b/templates/check_owner.html
@@ -1,7 +1,7 @@
 {%extends "home.html" %}
 {%block content%}
 
-<h1>Select an image to Upload</h1>
+<h1>Select an image to check ownership </h1>
 <form method="POST" enctype="multipart/form-data">
         <input type="file" name="file" accept=".jpg,.png">
 	   <br>
