--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,12 +1,12 @@
 {%extends "home.html" %}
 {%block content%}
-
 <h1>Select an image to Upload</h1>
-<form method="POST" enctype="multipart/form-data">
-        <input type="file" name="file" accept=".jpg,.png">
-	   <br>
-        <input type="submit" value="Submit">
-</form>
+<input type="file" id="image-file" name="file" accept=".jpg,.png">
+<br>
+<button id="upload-btn" type="button">Upload</button>
+<script>
+document.getElementById('upload-btn').addEventListener('click', uploadImage);
+</script>
 {% if error %}
 <p class="error" style="color:red;"> {{ error }}
 {% endif %}
