--- a/templates/view.html
+++ b/templates/view.html
@@ -1,7 +1,7 @@
 {%extends "home.html" %}
 {%block content%}
 {% for i,j in data %}
-<a href="view_download/{{i}}" target="_blank">{{i}}</a>
+<a href="{{pds_address}}/{{name}}/view_download/{{i}}" target="_blank">{{i}}</a>
 <br>
 {% endfor%}
 {% if error %}
