--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,14 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-
+li {
+            list-style: none; /* Remove the bullet point */
+}
+li::before {
+content: "\2192"; /* Use a bullet point symbol */
+color: green; /* Change the color of the bullet point */
+margin-right: 0.5em; /* Add some space between the bullet point and the text */
+}
 label {
 	display: inline-block;
 	width: 150px;
